adding model links

--- a/.env.default
+++ b/.env.default
@@ -11,3 +11,7 @@ HOSPITALS_CSV_PATH='https://raw.githubusercontent.com/hfhoffman1144/langchain_ne
 NEO4J_URI='neo4j+s://860a8907.databases.neo4j.io'
 NEO4J_USERNAME='neo4j'
 NEO4J_PASSWORD='z7SGsCqFFbUc9Vv31Kv1Gvx9WA9kQ2ywjjO_1JMTKF8'
+
+HOSPITAL_AGENT_MODEL=gpt-3.5-turbo-1106
+HOSPITAL_CYPHER_MODEL=gpt-3.5-turbo-1106
+HOSPITAL_QA_MODEL=gpt-3.5-turbo-0125
