build frontend docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,4 +7,16 @@ services:
       - .env
     ports:
       - "8000:8000"
+
+  chatbot_frontend:
+    build:
+      context: ./chatbot_frontend
+    env_file:
+      - .env
+    depends_on:
+      - chatbot_api
+    ports:
+      - "8501:8501"
+
+    
   
