--- a/chatbot_frontend/Dockerfile
+++ b/chatbot_frontend/Dockerfile
@@ -7,5 +7,7 @@ COPY ./code /app
 COPY requirements.txt ./
 RUN pip install -r requirements.txt
 
+HEALTHCHECK CMD curl --fail  http://localhost:8000/hospital-rag-agent
+
 EXPOSE 8501
 CMD ["sh", "entrypoint.sh"]
