--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,8 @@ services:
      #- healthcare_chatbot_default
     depends_on:
       - chat_api
+    extra_hosts:
+    - "host.docker.internal:host-gateway"
     ports:
       - "8501:8501"
 
